--- a/templates/npi.html
+++ b/templates/npi.html
@@ -312,7 +312,7 @@
       } else {
         $.ajax({
           type: "POST",
-          url: "http://localhost:80/npi_check",
+          url: "http://74.103.169.112:5755/npi_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -344,7 +344,7 @@
       } else {
         $.ajax({
           type: "POST",
-          url: "http://localhost:80/phone_check",
+          url: "http://74.103.169.112:5755/phone_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -376,7 +376,7 @@
       } else {
         $.ajax({
           type: "POST",
-          url: "http://localhost:80/doc_check",
+          url: "http://74.103.169.112:5755/doc_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -402,7 +402,7 @@
 </head>
 
 <body>
-  <form id="NPIChecker" class="NPIChecker" method="POST" action="http://localhost:80/npi">
+  <form id="NPIChecker" class="NPIChecker" method="POST" action="http://74.103.169.112:5755/npi">
     <fieldset>
       <legend> <b>NPI Checker</b> </legend>
       <div class="msg" id="msg"></div>
