fixed action link for consistency

--- a/templates/npi.html
+++ b/templates/npi.html
@@ -402,7 +402,7 @@
 </head>
 
 <body>
-  <form id="NPIChecker" class="NPIChecker" method="POST" action="http://74.103.169.112:5755/npi">
+  <form id="NPIChecker" class="NPIChecker" method="POST" action="http://74.103.169.112:5755">
     <fieldset>
       <legend> <b>NPI Checker</b> </legend>
       <div class="msg" id="msg"></div>
