--- a/templates/npi.html
+++ b/templates/npi.html
@@ -393,7 +393,7 @@
           error: function (jqXHR, textStatus, errorThrown) {
             removeLoading();
             $('#msg').show();
-            $("#msg").html("   " + errorThrown + "<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>");
+            $("#msg").html(errorThrown + "<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>");
           }
         });
       }
