--- a/templates/npi.html
+++ b/templates/npi.html
@@ -330,7 +330,7 @@
           error: function (jqXHR, textStatus, errorThrown) {
             removeLoading();
             $('#msg').show();
-            $("#msg").html(JSON.stringify(jqXHR) + " " + JSON.stringify(textStatus) + " " + errorThrown);
+            $("#msg").html("Error:", errorThrown);
           }
         });
       }
@@ -363,7 +363,7 @@
           error: function (jqXHR, textStatus, errorThrown) {
             removeLoading();
             $('#msg').show();
-            $("#msg").html(JSON.stringify(jqXHR) + " " + JSON.stringify(textStatus) + " " + errorThrown);
+            $("#msg").html("Error:", errorThrown);
           }
         });
       }
@@ -396,7 +396,7 @@
           error: function (jqXHR, textStatus, errorThrown) {
             removeLoading();
             $('#msg').show();
-            $("#msg").html(errorThrown + "<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>");
+            $("#msg").html("Error:",errorThrown + "<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>");
           }
         });
       }
