--- a/templates/npi.html
+++ b/templates/npi.html
@@ -313,7 +313,7 @@
         $.ajax({
           type: "POST",
           //url: "http://127.0.0.1:5755/npi_check",
-          url: "https://74.103.169.112:5755/npi_check",
+          url: "https://npi.omzig.dev/npi_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -346,7 +346,7 @@
         $.ajax({
           type: "POST",
           //url: "http://127.0.0.1:5755/phone_check",
-          url: "https://74.103.169.112:5755/phone_check",
+          url: "https://npi.omzig.dev/phone_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -379,7 +379,7 @@
         $.ajax({
           type: "POST",
           //url: "http://127.0.0.1:5755/doc_check",
-          url: "https://74.103.169.112:5755/doc_check",
+          url: "https://npi.omzig.dev/doc_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -405,7 +405,7 @@
 </head>
 
 <body>
-  <form id="NPIChecker" class="NPIChecker" method="POST" action="https://74.103.169.112:5755">
+  <form id="NPIChecker" class="NPIChecker" method="POST" action="https://npi.omzig.dev">
     <fieldset>
       <legend> <b>NPI Checker</b> </legend>
       <div class="msg" id="msg"></div>
