improved feedback, reduced logging code

--- a/templates/npi.html
+++ b/templates/npi.html
@@ -410,10 +410,10 @@
       <legend> <b>NPI Checker</b> </legend>
       <div class="msg" id="msg"></div>
       <label for="text">NPI Number:</label><br>
-      <input type="text" id="NPINUMBER" name="NPINUMBER" value="{{NPINUMBER}}" placeholder="1234566456" required><input
+      <input type="text" id="NPINUMBER" name="NPINUMBER" value="{{NPINUMBER}}" placeholder="1234567890" required><input
         class="button2" id="npisubmit" type="button" value="CHECK" onclick='checkNPI()'></td><br>
       <label for="text">Doctor Name:</label><br>
-      <input type="text" id="DOCTORNAME" name="DOCTORNAME" value="{{DOCTORNAME}}" placeholder="Joseph Smith"
+      <input type="text" id="DOCTORNAME" name="DOCTORNAME" value="{{DOCTORNAME}}" placeholder="John Smith"
         required><input size=3 maxlength=3 type="text" id="STATE" name="STATE" value="{{STATE}}" placeholder="PA"
         required><input class="button2" id="docsubmit" type="button" value="CHECK" onclick='checkDOC()'></td><br>
       <label for="text">Phone Number:</label><br>
