removed spen code

--- a/templates/npi.html
+++ b/templates/npi.html
@@ -396,7 +396,7 @@
           error: function (jqXHR, textStatus, errorThrown) {
             removeLoading();
             $('#msg').show();
-            $("#msg").html("Error:",errorThrown + "<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>👯‍♂️😏👯‍♂️😏👯😏👯‍♂️😏👯‍♂️😏👯‍♂️<br>");
+            $("#msg").html("Error:", errorThrown);
           }
         });
       }
