--- a/templates/npi.html
+++ b/templates/npi.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>NPI Checker</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     a {
       color: green;
