--- a/templates/npi.html
+++ b/templates/npi.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>NPI Checker</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <style>
     a {
       color: green;
