--- a/templates/log.html
+++ b/templates/log.html
@@ -42,7 +42,7 @@
 	function loadLogs() {
         $.ajax({
           type: "GET",
-          url: "http://127.0.0.1:5755/loadlogs",
+          url: "https://npi.omzig.dev/loadlogs",
           dataType: "text",
           cache: false,
           success: function (logs) {
