--- a/templates/log.html
+++ b/templates/log.html
@@ -42,8 +42,8 @@
 	function loadLogs() {
         $.ajax({
           type: "GET",
-		  //url: "http://127.0.0.1:5755/loadlogs",
-          url: "https://npi.omzig.dev/loadlogs",
+		  url: "http://127.0.0.1:5755/loadlogs",
+          //url: "https://npi.omzig.dev/loadlogs",
           dataType: "text",
           cache: false,
           success: function (logs) {
