--- a/templates/npi.html
+++ b/templates/npi.html
@@ -313,8 +313,8 @@
       } else {
         $.ajax({
           type: "POST",
-          url: "http://127.0.0.1:5755/npi_check",
-          //url: "https://npi.omzig.dev/npi_check",
+          //url: "http://127.0.0.1:5755/npi_check",
+          url: "https://npi.omzig.dev/npi_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -346,8 +346,8 @@
       } else {
         $.ajax({
           type: "POST",
-          url: "http://127.0.0.1:5755/phone_check",
-          //url: "https://npi.omzig.dev/phone_check",
+          //url: "http://127.0.0.1:5755/phone_check",
+          url: "https://npi.omzig.dev/phone_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -379,8 +379,8 @@
       } else {
         $.ajax({
           type: "POST",
-          url: "http://127.0.0.1:5755/doc_check",
-          //url: "https://npi.omzig.dev/doc_check",
+          //url: "http://127.0.0.1:5755/doc_check",
+          url: "https://npi.omzig.dev/doc_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -424,7 +424,7 @@
   </form>
 
   <script>
-    // When the user hits enter, simulate form submission which calls check___();
+    // When the user hits enter, simulate form submission which calls the appropriate check() function.
     $('#NPINUMBER').keypress(function (event) {
       var keycode = (event.keyCode ? event.keyCode : event.which);
       if (keycode == '13') {
