--- a/templates/npi.html
+++ b/templates/npi.html
@@ -313,8 +313,8 @@
       } else {
         $.ajax({
           type: "POST",
-          url: "http://127.0.0.1:5755/npi_check",
-          //url: "https://npi.omzig.dev/npi_check",
+          //url: "http://127.0.0.1:5755/npi_check",
+          url: "https://npi.omzig.dev/npi_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -346,8 +346,8 @@
       } else {
         $.ajax({
           type: "POST",
-          url: "http://127.0.0.1:5755/phone_check",
-          //url: "https://npi.omzig.dev/phone_check",
+          //url: "http://127.0.0.1:5755/phone_check",
+          url: "https://npi.omzig.dev/phone_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -379,8 +379,8 @@
       } else {
         $.ajax({
           type: "POST",
-          url: "http://127.0.0.1:5755/doc_check",
-          //url: "https://npi.omzig.dev/doc_check",
+          //url: "http://127.0.0.1:5755/doc_check",
+          url: "https://npi.omzig.dev/doc_check",
           data: $('#NPIChecker').serialize(),
           dataType: "html",
           cache: false,
@@ -415,7 +415,7 @@
         class="button2" id="npisubmit" type="button" value="CHECK" onclick='checkNPI()'></td><br>
       <label for="text">Doctor Name:</label><br>
       <input type="text" id="DOCTORNAME" name="DOCTORNAME" value="{{DOCTORNAME}}" placeholder="John Smith"
-        required><input size=3 maxlength=3 type="text" id="STATE" name="STATE" value="{{STATE}}" placeholder="PA"
+        required><input size=2 maxlength=2 type="text" id="STATE" name="STATE" value="{{STATE}}" placeholder="PA"
         required><input class="button2" id="docsubmit" type="button" value="CHECK" onclick='checkDOC()'></td><br>
       <label for="text">Phone Number:</label><br>
       <input type="text" id="PHONENUMBER" name="PHONENUMBER" value="{{PHONENUMBER}}" placeholder="888-555-1234"
