set pecos api as a variable

--- a/templates/npi.html
+++ b/templates/npi.html
@@ -286,8 +286,8 @@
 
     function changeBackground() {
       var pecos = document.getElementsByClassName('pecos');
-      console.log("pecos: ", pecos);
-      console.log("pecos[i]:", pecos[0].innerHTML);
+      //console.log("pecos: ", pecos);
+      //console.log("pecos[i]:", pecos[0].innerHTML);
 
       for (var i = 0, len = pecos.length; i < len; i++) {
         if (pecos[i].innerHTML == "NO") {
